--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "FCCUmpire",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -16,17 +16,20 @@
     "@react-native-firebase/firestore": "^17.4.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.4.0",
     "firebase": "^9.19.1",
     "lottie-react-native": "^5.1.5",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-color-matrix-image-filters": "^6.0.3",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.6.3",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
