--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.6.3",
+    "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
